--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "vue-sanadmin",
   "version": "0.1.0",
-  "private": true,
+  "main": "dist/vue-sanadmin.umd.min.js",
+  "module": "dist/vue-sanadmin.umd.min.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.6.6",
+    "axios": "^0.18.0",
+    "laravel-echo": "^1.5.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -21,6 +23,9 @@
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.5.21"
   },
+  "files": [
+    "dist/vue-sanadmin.umd.min.js"
+  ],
   "eslintConfig": {
     "root": true,
     "env": {
