--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "laravel-echo": "^1.5.3",
-    "vuex": "^3.0.1"
+    "laravel-echo": "^1.5.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
