--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "laravel-echo": "^1.5.3"
+    "laravel-echo": "^1.5.3",
+    "lodash": "^4.17.11",
+    "store": "^2.0.12"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
